updated HTML. added certifications and added Javascript

--- a/index.html
+++ b/index.html
@@ -54,18 +54,18 @@
         </ul>
       </div>
     </nav>
-    <div class="container border-bottom pb-4 ps-3">
+    <div class="container border-bottom pb-4 ps-3" id="description-container">
       <div class="row">
         <div class="col-lg-4 text-center">
           <img
-            src="images/ginny.JPG"
+            src="images/ginelle_trans.png"
             class="img-fluid rounded mt-5"
             id="ginelle"
           />
         </div>
         <div class="col-md-8 primary-text" id="self-description">
-          <h1 class="text-center mt-5">Ginelle Doubek</h1>
-          <p class="text-center mt-2 mb-3 fw-bold">
+          <h1 class="text-center mt-5" id="ginelle_doubek">Ginelle Doubek</h1>
+          <p class="text-center mt-2 mb-3 fw-bold" id="ginelle_doubek">
             Aspiring Full-stack Developer, based in Switzerland
           </p>
           <div class="self_description">
@@ -83,114 +83,175 @@
               skills in the tech industry.
             </p>
           </div>
+          <div>
+            <div class="text-center mt-5 ms-5">
+              <p class="d-inline-flex gap-5">
+                <button
+                  class="btn btn-primary px-5"
+                  data-bs-toggle="collapse"
+                  href="#multiCollapseExample1"
+                  role="button"
+                  aria-expanded="false"
+                  aria-controls="multiCollapseExample1"
+                >
+                  Experience
+                </button>
+                <button
+                  class="btn btn-primary px-5"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#multiCollapseExample2"
+                  aria-expanded="false"
+                  aria-controls="multiCollapseExample2"
+                >
+                  Education
+                </button>
+                <button
+                  class="btn btn-primary px-5"
+                  type="button"
+                  data-bs-toggle="collapse"
+                  data-bs-target="#multiCollapseExample3"
+                  aria-expanded="false"
+                  aria-controls="multiCollapseExample3"
+                >
+                  Skills
+                </button>
+              </p>
+              <div class="row">
+                <div class="col-4" id="experience-container">
+                  <div
+                    class="collapse multi-collapse"
+                    id="multiCollapseExample1"
+                  >
+                    <div class="card card-body" id="experience">
+                      <div class="timeline-area">
+                        <div class="job-description">
+                          <h3>Abstract Coordinator</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                        <div class="job-description">
+                          <h3>Sales Manager</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                        <div class="job-description">
+                          <h3>Abstract Coordinator</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div
+                    class="collapse multi-collapse"
+                    id="multiCollapseExample2"
+                  >
+                    <div class="card card-body" id="education">
+                      <div class="timeline-area">
+                        <div class="job-description">
+                          <h3>Abstract Coordinator</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                        <div class="job-description">
+                          <h3>Sales Manager</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                        <div class="job-description">
+                          <h3>Abstract Coordinator</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-4">
+                  <div
+                    class="collapse multi-collapse"
+                    id="multiCollapseExample3"
+                  >
+                    <div class="card card-body" id="skills">
+                      <div class="timeline-area">
+                        <div class="job-description">
+                          <h3>Abstract Coordinator</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                        <div class="job-description">
+                          <h3>Sales Manager</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                        <div class="job-description">
+                          <h3>Abstract Coordinator</h3>
+                          <h4>EULAR - Zurich, Swizerland</h4>
+                          <p>2021-2023</p>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-    <div class="text-center mt-5 ms-5">
-      <p class="d-inline-flex gap-5">
-        <button
-          class="btn btn-primary px-5"
-          data-bs-toggle="collapse"
-          href="#multiCollapseExample1"
-          role="button"
-          aria-expanded="false"
-          aria-controls="multiCollapseExample1"
-        >
-          Experience
-        </button>
-        <button
-          class="btn btn-primary px-5"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#multiCollapseExample2"
-          aria-expanded="false"
-          aria-controls="multiCollapseExample2"
-        >
-          Education
-        </button>
-        <button
-          class="btn btn-primary px-5"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#multiCollapseExample3"
-          aria-expanded="false"
-          aria-controls="multiCollapseExample3"
-        >
-          Skills
-        </button>
-      </p>
-      <div class="row">
-        <div class="col-4" id="experience-container">
-          <div class="collapse multi-collapse" id="multiCollapseExample1">
-            <div class="card card-body" id="experience">
-              <div class="timeline-area">
-                <div class="job-description">
-                  <h3>Abstract Coordinator</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-                <div class="job-description">
-                  <h3>Sales Manager</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-                <div class="job-description">
-                  <h3>Abstract Coordinator</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="collapse multi-collapse" id="multiCollapseExample2">
-            <div class="card card-body" id="education">
-              <div class="timeline-area">
-                <div class="job-description">
-                  <h3>Abstract Coordinator</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-                <div class="job-description">
-                  <h3>Sales Manager</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-                <div class="job-description">
-                  <h3>Abstract Coordinator</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="collapse multi-collapse" id="multiCollapseExample3">
-            <div class="card card-body" id="skills">
-              <div class="timeline-area">
-                <div class="job-description">
-                  <h3>Abstract Coordinator</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-                <div class="job-description">
-                  <h3>Sales Manager</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-                <div class="job-description">
-                  <h3>Abstract Coordinator</h3>
-                  <h4>EULAR - Zurich, Swizerland</h4>
-                  <p>2021-2023</p>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+    <h1 class="text-center pt-5">Certifications</h1>
+    <div class="photos-wrapper">
+      <div class="imageContainer">
+        <img
+          class="image_certification1"
+          src="/images/Professional Cert Program in Data Analytics.jpg"
+        />
+        <a
+          href="https://www.shecodes.io/certificates/de2014f35ca3fe08c5c7c16516f5a395?_gl=1*1hs2agr*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img class="image_certification" src="/images/INtro to coding.png"
+        /></a>
+        <a
+          href="https://www.shecodes.io/certificates/715be762a8e8843700a9fac7b5b7b59c?_gl=1*1tv6jhf*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img class="image_certification" src="/images/Intro to WebDevt.png"
+        /></a>
+        <img class="image_certification" src="/images/Web Devt Cert.png" />
+        <img
+          class="image_certification"
+          src="/images/Advance Web Devt Cert SheCodes.png"
+        />
+        <img class="image_certification" src="/images/Intro to Python.png" />
+        <img
+          class="image_certification"
+          src="/images/ADvance Python Cert.png"
+        />
+        <img class="image_certification" src="/images/AI Certificate.png" />
       </div>
     </div>
+    <footer class="text-center mt-5">
+      <a href="mailto:ginelle.doubek@gmail.com" class="text-center"
+        >ginelle.doubek@gmail.com</a
+      >
+      <div>
+        <span>
+          <a href="https://www.linkedin.com/in/ginelledoubek/" target="_blank"
+            ><i class="fa fa-linkedin-square" aria-hidden="true"></i
+          ></a>
+          <a href="https://github.com/ginedou0315" target="_blank"
+            ><i class="fa fa-github-square" aria-hidden="true"></i
+          ></a>
+          <a
+            href="https://www.instagram.com/iamginnydou?igsh=eXVwcnB2Z25lOGg4&utm_source=qr"
+            target="_blank"
+            ><i class="fa fa-instagram" aria-hidden="true"></i
+          ></a>
+        </span>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
