--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/css2?family=Atma:wght@300;400;500;600;700&family=Dancing+Script:wght@400..700&family=Delius&family=Fleur+De+Leah&family=Great+Vibes&family=Indie+Flower&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Lexend:wght@100..900&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Merriweather:ital,wght@0,300;0,400;0,700;0,900;1,300;1,400;1,700;1,900&family=Roboto+Serif:ital,opsz,wght@0,8..144,100..900;1,8..144,100..900&family=Source+Code+Pro:ital,wght@1,300&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
@@ -32,24 +37,33 @@
           <li>
             <a href="#"
               ><i class="fa fa-home" aria-hidden="true"></i>
-              <small>Homepage</small></a
+              <small id="homepage">Homepage</small></a
             >
           </li>
           <li>
             <a href="#"
-              ><i class="fa-solid fa-list-check"></i> <small>Resume</small></a
+              ><i class="fa-solid fa-list-check"></i>
+              <small id="resume">Resume</small></a
             >
           </li>
           <li>
             <a href="#"
-              ><i class="fa-solid fa-briefcase"></i> <small>Porfolio</small></a
+              ><i class="fa-solid fa-briefcase"></i>
+              <small id="portfolio">Porfolio</small></a
             >
           </li>
           <li>
             <a href="#"
               ><i class="fa-solid fa-address-book"></i>
-              <small>Contacts</small></a
+              <small id="contact">Contacts</small></a
             >
+          </li>
+          <li>
+            <div class="language-switcher text-center">
+              <button onclick="switchLanguage('en')">EN</button>
+              |
+              <button onclick="switchLanguage('de')">DE</button>
+            </div>
           </li>
         </ul>
       </div>
@@ -65,7 +79,7 @@
         </div>
         <div class="col-md-8 primary-text" id="self-description">
           <h1 class="text-center mt-5" id="ginelle_doubek">Ginelle Doubek</h1>
-          <p class="text-center mt-2 mb-3 fw-bold" id="ginelle_doubek">
+          <p class="text-center mt-2 mb-3 fw-bold" id="job_based">
             Aspiring Full-stack Developer, based in Switzerland
           </p>
           <div class="self_description">
@@ -205,10 +219,11 @@
     <h1 class="text-center pt-5">Certifications</h1>
     <div class="photos-wrapper">
       <div class="imageContainer">
-        <img
-          class="image_certification1"
-          src="/images/Professional Cert Program in Data Analytics.jpg"
-        />
+        <a href="https://success.simplilearn.com/85031165" target="_blank"
+          ><img
+            class="image_certification1"
+            src="/images/Professional Cert Program in Data Analytics.jpg"
+        /></a>
         <a
           href="https://www.shecodes.io/certificates/de2014f35ca3fe08c5c7c16516f5a395?_gl=1*1hs2agr*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
           target="_blank"
@@ -219,17 +234,35 @@
           target="_blank"
           ><img class="image_certification" src="/images/Intro to WebDevt.png"
         /></a>
-        <img class="image_certification" src="/images/Web Devt Cert.png" />
-        <img
-          class="image_certification"
-          src="/images/Advance Web Devt Cert SheCodes.png"
-        />
-        <img class="image_certification" src="/images/Intro to Python.png" />
-        <img
-          class="image_certification"
-          src="/images/ADvance Python Cert.png"
-        />
-        <img class="image_certification" src="/images/AI Certificate.png" />
+        <a
+          href="https://www.shecodes.io/certificates/b0534a8f0535df32b6c802e5f86bea49?_gl=1*1dsea0q*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img class="image_certification" src="/images/Web Devt Cert.png"
+        /></a>
+        <a
+          href="https://www.shecodes.io/certificates/df9eb683b193f826c8f87542c6e77c24?_gl=1*1dsea0q*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img
+            class="image_certification"
+            src="/images/Advance Web Devt Cert SheCodes.png"
+        /></a>
+        <a
+          href="https://www.shecodes.io/certificates/1119cee0dc00bd7dd2353acf51d5169c?_gl=1*1j8fahz*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img class="image_certification" src="/images/Intro to Python.png"
+        /></a>
+        <a
+          href="https://www.shecodes.io/certificates/84540bb96675e7184be2f2c182e74734?_gl=1*1j8fahz*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img
+            class="image_certification"
+            src="/images/ADvance Python Cert.png"
+        /></a>
+        <a
+          href="https://www.shecodes.io/certificates/b5a7bc9b07de4a74170541d6f8c2f538?_gl=1*kp62h1*_gcl_au*MTE5MjQ5ODg1Ni4xNzM4NTAwOTI4"
+          target="_blank"
+          ><img class="image_certification" src="/images/AI Certificate.png"
+        /></a>
       </div>
     </div>
     <footer class="text-center mt-5">
