changed the background, cleaned css code

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
         </ul>
       </div>
     </nav>
-    <div class="container border-bottom pb-4 ps-3" id="description-container">
+    <div class="container pb-4 ps-3" id="description-container">
       <div class="row">
         <div class="col-lg-4 text-center">
           <img
