added Resume HTML

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
   <body>
     <nav class="nav-bar">
       <div class="side-nav">
-        <a href="#" class="navbar-logo">G.D.</a>
+        <a href="#" class="navbar-logo">GD</a>
         <ul class="nav-links">
           <li>
             <a href="#"
@@ -41,7 +41,7 @@
             >
           </li>
           <li>
-            <a href="#"
+            <a href="/resume.html"
               ><i class="fa-solid fa-list-check"></i>
               <small id="resume">Resume</small></a
             >
@@ -80,7 +80,7 @@
         <div class="col-md-8 primary-text" id="self-description">
           <h1 class="text-center mt-5" id="ginelle_doubek">Ginelle Doubek</h1>
           <p class="text-center mt-2 mb-3 fw-bold" id="job_based">
-            Aspiring Full-stack Developer, based in Switzerland
+            Website Developer, based in Switzerland
           </p>
           <div class="self_description">
             <p class="px-5 pt-3">
