--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             >
           </li>
           <li>
-            <a href="#"
+            <a href="/project.html"
               ><i class="fa-solid fa-briefcase"></i>
               <small id="portfolio">Porfolio</small></a
             >
@@ -216,6 +216,169 @@
         </div>
       </div>
     </div>
+    <div>
+      <div class="apps_hobbies">
+        <div class="row" id="skills_learned">
+          <div class="col-3 mb-2 skills">
+            <img
+              alt="HTML"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/010/original/icon-html.png?1711034484"
+            />
+            <div><small class="block ps-2">HTML</small></div>
+          </div>
+          <div class="col-3 mb-3 p-1 skills">
+            <img
+              alt="CSS"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/004/original/icon-css.png?1711033534"
+            />
+            <small class="block ps-3">CSS</small>
+          </div>
+          <div class="col-3 mb-3 p-1">
+            <img
+              alt="JavaScript"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/011/original/icon-js.png?1711033542"
+            />
+            <small class="block">JavaScript</small>
+          </div>
+          <div class="col-3 mb-3 p-1">
+            <img
+              alt="VSCode"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/005/original/editor.png?1701382155"
+            />
+            <small class="block">VSCode</small>
+          </div>
+
+          <div class="col-4">
+            <div class="col-3 mb-3 p-1">
+              <img
+                alt="API"
+                class="block img-fluid rounded false"
+                data-bs-toggle="tooltip"
+                src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
+              />
+              <small class="block">API</small>
+            </div>
+            <img
+              alt="GitHub"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/017/original/github.png?1701382623"
+            />
+
+            <img
+              alt="Hosting"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/009/original/hosting.png?1701382192"
+            />
+
+            <img
+              alt="Python"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              title="Learn Python for easy and powerful programming across many fields."
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/018/original/icon-python.png?1712224383"
+            />
+          </div>
+          <div class="col-4">
+            <img
+              alt="Data Structure"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              title="Understand data structures to organize and manage information efficiently."
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/020/original/icon-data-structure.png?1712224420"
+            />
+
+            <img
+              alt="OOP"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              title="Learn Object-Oriented Programming (OOP) to organize code with objects for clearer structure."
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
+            />
+
+            <img
+              alt="File Manipulation"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              title="Master file manipulation to edit and manage files programmatically."
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
+            />
+
+            <img
+              alt="Data Visualization"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              title="Explore data visualization with Python and Plotting to present data in compelling ways."
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
+            />
+          </div>
+          <img
+            alt="Data Manipulation"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Learn how to use Python to easily filter, map, and organize data with code.
+
+
+
+"
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/024/original/icon-data-manipulation.png?1712224508"
+          />
+
+          <img
+            alt="AI"
+            class="block img-fluid rounded rotating"
+            data-bs-toggle="tooltip"
+            title="Integrate Artificial Intelligence into your code to make your code drastically smarter."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/001/original/icon-AI.png?1711011711"
+          />
+
+          <img
+            alt="Git"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Learn how to track your code changes and collaborate using Git."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/019/original/Git-Icon-1788C.png?1710331679"
+          />
+
+          <img
+            alt="Bootstrap"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Use Bootstrap to quickly design and customize responsive websites."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/003/original/bootstrap.png?1701382150"
+          />
+
+          <img
+            alt="SEO"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Learn SEO (Search Engine Optimization) to boost your website&#39;s visibility on search engines."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/014/original/seo.png?1701426631"
+          />
+
+          <img
+            alt="Responsive"
+            class="block mb-2 img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Learn responsive development to make websites work on any device."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/013/original/responsive.png?1701382225"
+          />
+        </div>
+        <div class="col-6 hobbies">
+          <img src="/images/tennis.png" alt="tennis" />
+        </div>
+      </div>
+    </div>
+
     <h1 class="text-center pt-5">Certifications</h1>
     <div class="photos-wrapper">
       <div class="imageContainer">
@@ -265,11 +428,12 @@
         /></a>
       </div>
     </div>
-    <footer class="text-center mt-5">
+    <div class="divider"></div>
+    <footer class="text-center mt-4">
       <a href="mailto:ginelle.doubek@gmail.com" class="text-center"
         >ginelle.doubek@gmail.com</a
       >
-      <div>
+      <div class="contact_icons">
         <span>
           <a href="https://www.linkedin.com/in/ginelledoubek/" target="_blank"
             ><i class="fa fa-linkedin-square" aria-hidden="true"></i
@@ -283,6 +447,12 @@
             ><i class="fa fa-instagram" aria-hidden="true"></i
           ></a>
         </span>
+      </div>
+      <div>
+        <small
+          >All rights reserved &copy; 2025 Ginelle Doubek. Open-sourced in
+          Github. Hosted by Netlify.
+        </small>
       </div>
     </footer>
     <script
