change CSS spacing in apps

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
             />
             <small class="block ps-3">CSS</small>
           </div>
-          <div class="col-3 mb-3 p-1">
+          <div class="col-3 mb-3 p-1 skills">
             <img
               alt="JavaScript"
               class="block img-fluid rounded false"
@@ -246,7 +246,7 @@
             />
             <small class="block">JavaScript</small>
           </div>
-          <div class="col-3 mb-3 p-1">
+          <div class="col-3 mb-3 p-1 skills">
             <img
               alt="VSCode"
               class="block img-fluid rounded false"
@@ -256,30 +256,34 @@
             <small class="block">VSCode</small>
           </div>
 
-          <div class="col-4">
-            <div class="col-3 mb-3 p-1">
-              <img
-                alt="API"
-                class="block img-fluid rounded false"
-                data-bs-toggle="tooltip"
-                src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
-              />
-              <small class="block">API</small>
-            </div>
+          <div class="col-3 mb-3 p-1 skills">
+            <img
+              alt="API"
+              class="block img-fluid rounded false"
+              data-bs-toggle="tooltip"
+              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
+            />
+            <small class="block p-1 ps-2">API</small>
+          </div>
+          <div class="col-3 mb-3 p-1 skills">
             <img
               alt="GitHub"
               class="block img-fluid rounded false"
               data-bs-toggle="tooltip"
               src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/017/original/github.png?1701382623"
             />
-
+            <small class="block">Github</small>
+          </div>
+          <div class="col-3 mb-3 p-1 skills">
             <img
               alt="Hosting"
               class="block img-fluid rounded false"
               data-bs-toggle="tooltip"
               src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/009/original/hosting.png?1701382192"
             />
-
+            <small class="block">Hosting</small>
+          </div>
+          <div class="col-3 mb-3 p-1 skills">
             <img
               alt="Python"
               class="block img-fluid rounded false"
@@ -287,8 +291,9 @@
               title="Learn Python for easy and powerful programming across many fields."
               src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/018/original/icon-python.png?1712224383"
             />
+            <small class="block">Python</small>
           </div>
-          <div class="col-4">
+          <div class="col-3 skills">
             <img
               alt="Data Structure"
               class="block img-fluid rounded false"
@@ -296,31 +301,32 @@
               title="Understand data structures to organize and manage information efficiently."
               src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/020/original/icon-data-structure.png?1712224420"
             />
-
-            <img
-              alt="OOP"
-              class="block img-fluid rounded false"
-              data-bs-toggle="tooltip"
-              title="Learn Object-Oriented Programming (OOP) to organize code with objects for clearer structure."
-              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
-            />
-
-            <img
-              alt="File Manipulation"
-              class="block img-fluid rounded false"
-              data-bs-toggle="tooltip"
-              title="Master file manipulation to edit and manage files programmatically."
-              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
-            />
-
-            <img
-              alt="Data Visualization"
-              class="block img-fluid rounded false"
-              data-bs-toggle="tooltip"
-              title="Explore data visualization with Python and Plotting to present data in compelling ways."
-              src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
-            />
+            <small class="block text-center">Data Structure</small>
           </div>
+          <img
+            alt="OOP"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Learn Object-Oriented Programming (OOP) to organize code with objects for clearer structure."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
+          />
+
+          <img
+            alt="File Manipulation"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Master file manipulation to edit and manage files programmatically."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
+          />
+
+          <img
+            alt="Data Visualization"
+            class="block img-fluid rounded false"
+            data-bs-toggle="tooltip"
+            title="Explore data visualization with Python and Plotting to present data in compelling ways."
+            src="//s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
+          />
+
           <img
             alt="Data Manipulation"
             class="block img-fluid rounded false"
