trying to figure out what i want to do hahaha

--- a/index.html
+++ b/index.html
@@ -216,7 +216,31 @@
         </div>
       </div>
     </div>
-
+    <div class="apps-hobby-container text-center mt-5">
+      <div class="row ms-5 ps-5">
+        <div class="col-6">
+          <h1>Hard Skills</h1>
+          <div class="row row-cols-3">
+            <div class="col">HTML</div>
+            <div class="col">CSS</div>
+            <div class="col">Javascript</div>
+            <div class="col">HTML</div>
+            <div class="col">HTML</div>
+            <div class="col">HTML</div>
+            <div class="col">HTML</div>
+          </div>
+        </div>
+        <div class="col-6">
+          <h1>Hobbies</h1>
+          <div class="row row-cols-3">
+            <div class="col">Tennis</div>
+            <div class="col">Fitness</div>
+            <div class="col">Hiking</div>
+            <div class="col">Cross-Country</div>
+          </div>
+        </div>
+      </div>
+    </div>
     <h1 class="text-center pt-5">Certifications</h1>
     <div class="photos-wrapper">
       <div class="imageContainer">
