--- a/index.html
+++ b/index.html
@@ -218,7 +218,7 @@
     </div>
     <div class="apps-hobby-container text-center mt-5">
       <div class="row ms-5 ps-5">
-        <div class="col-6">
+        <div class="col-6 border-end">
           <h1>Hard Skills</h1>
           <div class="row row-cols-3">
             <div class="col">HTML</div>
