added hobbies and Hard Skills

--- a/index.html
+++ b/index.html
@@ -216,21 +216,110 @@
         </div>
       </div>
     </div>
-    <div class="apps-hobby-container text-center mt-5">
+    <div class="apps-hobby-container mt-5 ms-5">
       <div class="row ms-5 ps-5">
-        <div class="col-6 border-end">
+        <div class="col-8 border-end">
           <h1>Hard Skills</h1>
           <div class="row row-cols-3">
-            <div class="col">HTML</div>
-            <div class="col">CSS</div>
-            <div class="col">Javascript</div>
-            <div class="col">HTML</div>
-            <div class="col">HTML</div>
-            <div class="col">HTML</div>
-            <div class="col">HTML</div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/010/original/icon-html.png?1711034484"
+                class="skills"
+                alt="HTML_icon"
+              />
+              HTML
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/004/original/icon-css.png?1711033534"
+                class="skills"
+                alt="CSS_icon"
+              />
+              CSS
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/011/original/icon-js.png?1711033542"
+                class="skills"
+                alt="Javascript_icon"
+              />
+              Javascript
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/005/original/editor.png?1701382155"
+                class="skills"
+                alt="VSCode_icon"
+              />
+              VSCode
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/002/original/icon-api.png?1712224402"
+                class="skills"
+                alt="API_icon"
+              />
+              API
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/017/original/github.png?1701382623"
+                class="skills"
+                alt="Github_icon"
+              />
+              Github
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/009/original/hosting.png?1701382192"
+                class="skills"
+                alt="Hosting_icon"
+              />
+              Hosting
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/018/original/icon-python.png?1712224383"
+                class="skills"
+                alt="Python_icon"
+              />
+              Python
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/020/original/icon-data-structure.png?1712224420"
+                class="skills"
+                alt="DataStructure_icon"
+              />
+              Data Structure
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
+                class="skills"
+                alt=""
+              />
+              OOP
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/021/original/icon-file-manipulation.png?1712224473"
+                class="skills"
+                alt="FileManipulation_icon"
+              />
+              File Manipulation
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/023/original/icon-data-visualization.png?1712224496"
+                class="skills"
+                alt="DataVisualization_icon"
+              />
+              Data Visualization
+            </div>
           </div>
         </div>
-        <div class="col-6">
+        <div class="col-4">
           <h1>Hobbies</h1>
           <div class="row row-cols-3">
             <div class="col">Tennis</div>
