--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <div class="col-lg-4 text-center">
           <img
             src="images/ginelle_trans.png"
-            class="img-fluid rounded mt-5"
+            class="img-fluid rounded"
             id="ginelle"
           />
         </div>
@@ -216,9 +216,9 @@
         </div>
       </div>
     </div>
-    <div class="apps-hobby-container mt-5 ms-5">
+    <div class="apps-hobby-container m-5 p-5">
       <div class="row ms-5 ps-5">
-        <div class="col-8 border-end">
+        <div class="col-7 border-end ps-5">
           <h1>Hard Skills</h1>
           <div class="row row-cols-3">
             <div class="col">
@@ -319,7 +319,7 @@
             </div>
           </div>
         </div>
-        <div class="col-4">
+        <div class="col-5 ps-5">
           <h1>Hobbies</h1>
           <div class="row row-cols-3">
             <div class="col">Tennis</div>
