updated HTML, added cv download button

--- a/index.html
+++ b/index.html
@@ -120,15 +120,8 @@
                 >
                   Education
                 </button>
-                <button
-                  class="btn btn-primary px-5"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#multiCollapseExample3"
-                  aria-expanded="false"
-                  aria-controls="multiCollapseExample3"
-                >
-                  Skills
+                <button class="btn btn-primary px-5" type="button">
+                  <a class="download_cv" href="#"> Download CV</a>
                 </button>
               </p>
               <div class="row">
@@ -145,14 +138,14 @@
                           <p>2021-2023</p>
                         </div>
                         <div class="job-description">
-                          <h3>Sales Manager</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
+                          <h3>Business Dev`t & Acquisition Manager</h3>
+                          <h4>Claviger Middle East, UAE & CH</h4>
+                          <p>2018-2021</p>
                         </div>
                         <div class="job-description">
-                          <h3>Abstract Coordinator</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
+                          <h3>Global Sales Manager</h3>
+                          <h4>Starwood International, Dubai, UAE</h4>
+                          <p>2012-2018</p>
                         </div>
                       </div>
                     </div>
@@ -165,20 +158,20 @@
                   >
                     <div class="card card-body" id="education">
                       <div class="timeline-area">
-                        <div class="job-description">
-                          <h3>Abstract Coordinator</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
+                        <div class="education-description">
+                          <h3>Prof. Certificate Program in Data Analytics</h3>
+                          <h4>Simplilearn - University of Purdue</h4>
+                          <p>2022-2023</p>
                         </div>
-                        <div class="job-description">
-                          <h3>Sales Manager</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
+                        <div class="education-description">
+                          <h3>Master in Business Management</h3>
+                          <h4>University of Philippines, Los Baños</h4>
+                          <p>2009-2011</p>
                         </div>
-                        <div class="job-description">
-                          <h3>Abstract Coordinator</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
+                        <div class="education-description">
+                          <h3>Bachelors in Agricultural Economics</h3>
+                          <h4>University of Philippines, Los Baños</h4>
+                          <p>1999-2003</p>
                         </div>
                       </div>
                     </div>
@@ -188,27 +181,7 @@
                   <div
                     class="collapse multi-collapse"
                     id="multiCollapseExample3"
-                  >
-                    <div class="card card-body" id="skills">
-                      <div class="timeline-area">
-                        <div class="job-description">
-                          <h3>Abstract Coordinator</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
-                        </div>
-                        <div class="job-description">
-                          <h3>Sales Manager</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
-                        </div>
-                        <div class="job-description">
-                          <h3>Abstract Coordinator</h3>
-                          <h4>EULAR - Zurich, Swizerland</h4>
-                          <p>2021-2023</p>
-                        </div>
-                      </div>
-                    </div>
-                  </div>
+                  ></div>
                 </div>
               </div>
             </div>
@@ -219,7 +192,7 @@
     <div class="apps-hobby-container m-5 p-5">
       <div class="row ms-5 ps-5">
         <div class="col-7 border-end ps-5">
-          <h1>Hard Skills</h1>
+          <h1>Skills</h1>
           <div class="row row-cols-3">
             <div class="col">
               <img
