--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <li>
             <a href="/project.html"
               ><i class="fa-solid fa-briefcase"></i>
-              <small id="portfolio">Porfolio</small></a
+              <small id="portfolio">Projects</small></a
             >
           </li>
           <li>
@@ -270,7 +270,7 @@
               <img
                 src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/022/original/icon-oop.png?1712224445"
                 class="skills"
-                alt=""
+                alt="OOP_icon"
               />
               OOP
             </div>
@@ -289,6 +289,22 @@
                 alt="DataVisualization_icon"
               />
               Data Visualization
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/024/original/icon-data-manipulation.png?1712224508"
+                class="skills"
+                alt="DataManipulation_icon"
+              />
+              Data Manipulation
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/001/original/icon-AI.png?1711011711"
+                class="skills rotating"
+                alt="AI_icon"
+              />
+              AI
             </div>
           </div>
         </div>
