--- a/index.html
+++ b/index.html
@@ -306,6 +306,38 @@
               />
               AI
             </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/019/original/Git-Icon-1788C.png?1710331679"
+                class="skills"
+                alt="Git_icon"
+              />
+              Git
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/003/original/bootstrap.png?1701382150"
+                class="skills"
+                alt="Bootstrap_icon"
+              />
+              Bootstrap
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/014/original/seo.png?1701426631"
+                class="skills"
+                alt="SEO_icon"
+              />
+              SEO
+            </div>
+            <div class="col">
+              <img
+                src="https://s3.amazonaws.com/shecodesio-production/skills/thumbnails/000/000/013/original/responsive.png?1701382225"
+                class="skills"
+                alt="Responsive_icon"
+              />
+              Responsive
+            </div>
           </div>
         </div>
         <div class="col-5 ps-5">
